--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -27,30 +27,30 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
+        uses: actions/checkout@v4
 
       - name: Validate Renovate JSON
         run: jq type .github/renovate.json || exit 1
 
       - name: Get token
-        id: get_token
-        uses: tibdex/github-app-token@021a2405c7f990db57f5eae5397423dcc554159c # v1.7.0
+        uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          app_id: ${{ secrets.DEMO_RENOVATE_APP_ID }}
-          installation_id: ${{ secrets.DEMO_RENOVATE_INSTALL_ID }}
-          private_key: ${{ secrets.DEMO_RENOVATE_PRIVATE_KEY }}
+          app-id: ${{ secrets.RENOVATE_APP_ID }}
+          private-key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}    
 
       - name: Self-hosted Renovate
-        uses: renovatebot/github-action@8343fa1c8d38f3d030aa8332773b737f7e2fa591 # v34.82.0
+        uses: renovatebot/github-action@v41.0.13
         env:
           # Repository taken from variable to keep configuration file generic
           RENOVATE_REPOSITORIES: ${{ github.repository }}
           # Onboarding not needed for self hosted
           RENOVATE_ONBOARDING: "false"
-          # Username for GitHub authentication (should match GitHub App name + [bot])
-          RENOVATE_USERNAME: "superseb-demo-renovate[bot]"
+          # Username for GitHub authentication (should match GitHub Application name + [bot])
+          RENOVATE_USERNAME: "sosadtsia-renovatebot[bot]"
           # Git commit author used, must match GitHub App
-          RENOVATE_GIT_AUTHOR: "superseb-demo-renovate <121964725+superseb-demo-renovate[bot]@users.noreply.github.com>"
+          RENOVATE_GIT_AUTHOR: "sosadtsia-renovatebot <1149912+sosadtsia-renovatebot[bot]@users.noreply.github.com>"
           # Use GitHub API to create commits (this allows for signed commits from GitHub App)
           RENOVATE_PLATFORM_COMMIT: "true"
           # Override schedule if set
@@ -58,4 +58,4 @@ jobs:
           LOG_LEVEL: ${{ inputs.logLevel || 'info' }}
         with:
           configurationFile: .github/renovate.json
-          token: '${{ steps.get_token.outputs.token }}'
+          token: '${{ steps.app-token.outputs.token }}'
