--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -19,6 +19,15 @@ on:
         type: string
 concurrency: renovate
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+  actions: read
+  checks: write
+  deployments: write
+  statuses: write
+
 jobs:
   renovate:
     runs-on: ubuntu-latest
@@ -38,7 +47,7 @@ jobs:
         with:
           app-id: ${{ secrets.RENOVATE_APP_ID }}
           private-key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}    
+          owner: ${{ github.repository_owner }}
 
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v41.0.13
