FIX: Passig secrets to calling workflow

--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -17,6 +17,11 @@ on:
         required: false
         default: "false"
         type: string
+    secrets:
+      RENOVATE_APP_ID:
+        required: true
+      RENOVATE_PRIVATE_KEY:
+        required: true
 concurrency: renovate
 
 jobs:
@@ -25,14 +30,11 @@ jobs:
     # Timeout-minutes to prevent hanging
     timeout-minutes: 60
 
-    # environment: development
+    environment: production
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: DEBUG
-        run: echo '${{ secrets.RENOVATE_APP_ID }} ${{ vars.HELLO }}'
 
       - name: Validate Renovate JSON
         run: jq type .github/renovate.json || exit 1
