--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -34,7 +34,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4git
 
       - name: Validate Renovate JSON
         run: jq type .github/renovate.json || exit 1
