FIX: Renaming renovate config due to deprecations

--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Validate Renovate JSON
-        run: jq type renovate.json || exit 1
+        run: jq type default.json || exit 1
 
       - name: Get token
         uses: actions/create-github-app-token@v1
@@ -64,5 +64,5 @@ jobs:
           RENOVATE_FORCE: ${{ github.event.inputs.overrideSchedule == 'true' && '{''schedule'':null}' || '' }}
           LOG_LEVEL: ${{ inputs.logLevel || 'info' }}
         with:
-          configurationFile: renovate.json
+          configurationFile: default.json
           token: '${{ steps.app-token.outputs.token }}'
