FIX: Adds permissions for renovate bot

--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -27,6 +27,11 @@ concurrency: renovate
 jobs:
   renovate:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+
     # Timeout-minutes to prevent hanging
     timeout-minutes: 60
 
