--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -69,5 +69,5 @@ jobs:
           RENOVATE_FORCE: ${{ github.event.inputs.overrideSchedule == 'true' && '{''schedule'':null}' || '' }}
           LOG_LEVEL: ${{ inputs.logLevel || 'info' }}
         with:
-          configurationFile: renovate.json
+          configurationFile: .github/renovate.json5 || renovate.json
           token: '${{ steps.app-token.outputs.token }}'
